@@ -1,12 +1,13 @@
 ARG APP_INSIGHTS_AGENT_VERSION=3.2.6
 ARG PLATFORM=""
-FROM hmctspublic.azurecr.io/base/java${PLATFORM}:17-distroless
+FROM hmctspublic.azurecr.io/base/java${PLATFORM}:21-distroless
 
-ENV APP finrem-case-orchestration.jar
-
-COPY build/libs/$APP /opt/app/
+COPY build/libs/finrem-case-orchestration.jar /opt/app/
 COPY lib/applicationinsights.json /opt/app/
 
 EXPOSE 9000
 
-CMD ["finrem-case-orchestration.jar"]
+CMD [ \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "finrem-case-orchestration.jar" \
+]
